[project]
name = "basichandoffs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.2.2",
]

[project.scripts]
basic = "basic:main"
handsoffsample = "basichandoffs.handsoffsample:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
